--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,13 @@ body {
     line-height: normal;
   }
 }
+
+
+/* hide the overflow  */
+@media (max-width: 400px) {
+  html,
+  body {
+   overflow-x: hidden;
+   overflow-y: auto;
+  }
+}
